fixed text no longer overflowing out of tiles

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -44,8 +44,8 @@ body{
     width: 35%;
     padding: 5px;
     padding-bottom: 50px;
-    height: 400px; 
-    /* Should be removed. Only for demonstration */
+    min-height: 400px;
+    word-wrap: break-word;
 }
 
 .column2{
@@ -59,7 +59,8 @@ body{
     width: 35%;
     padding: 5px;
     padding-bottom: 50px;
-    height: 400px;
+    min-height: 400px;
+    word-wrap: break-word;
 }
 
 .row{
